--- a/Soma-App/Pages/Soma.razor
+++ b/Soma-App/Pages/Soma.razor
@@ -1,7 +1,37 @@
-﻿<h3>Soma funcionou</h3>
+﻿
 
 @code {
 
 }
+
+<body>
+    <!-- Soma.razor -->
+    <h3>Calculadora de Soma</h3>
+
+    <div>
+        <label for="numero1">Número 1:</label>
+        <input id="numero1" @bind="numero1" type="number" />
+
+        <label for="numero2">Número 2:</label>
+        <input id="numero2" @bind="numero2" type="number" />
+
+        <button @onclick="CalcularSoma">Calcular Soma</button>
+
+        <p>Resultado da Soma: @resultado</p>
+    </div>
+
+    @code {
+        private int numero1;
+        private int numero2;
+        private int resultado;
+
+        private void CalcularSoma()
+        {
+            resultado = numero1 + numero2;
+        }
+    }
+</body>
+
+
 
 
