--- a/Soma-App/Pages/Index.razor
+++ b/Soma-App/Pages/Index.razor
@@ -16,11 +16,10 @@
 
 	<div class="Center">
 		<h1>Bem vindo, usuário!</h1>
-		<p>Esta é<br /> a página Inicial</p>
 	</div>
 
 	<div class="Center">
-		<Soma />
+		<Calc />
 	</div>
 
 </body>
